refactor: 엔티티 응답 구조 변경